MFH: Fixed bug #60978 (exit code incorrect)