Zend/tests/bug60978.phpt
@@ -3,7 +3,7 @@ Bug #60978 (exit code incorrect)
 --FILE--
 <?php
 $php = getenv('TEST_PHP_EXECUTABLE');
-exec($php . ' -r "exit(2);"', $output, $exit_code);
+exec($php . '-n -r "exit(2);"', $output, $exit_code);
 echo $exit_code;
 ?>
 --EXPECT--
